changed color palette and animated the title

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,25 +3,40 @@
   padding: 0;
   box-sizing: border-box;
   text-decoration: none;
+  font-family: 'Press Start 2P', cursive;
 }
 
 body {
+  margin-left: 40vh;
+  padding: 0;
   width: 100vh;
-  min-height: 100vh;
+  height: 100vh;
   background-image: linear-gradient(#a8d5fc9f, #f9c3f395);
   display: flex;
   justify-content: center;
+  align-items: center;
+  align-self: center;
 }
 
 .container {
   display: flex;
-  justify-content: center;
-
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: stretch;
+  background-color: rgba(255, 235, 205, 0.242);
+  width: 80vh;
+  height: 50vh;
+  padding: 1.3rem;
+  margin: 0.9rem;
+  border: 1px solid azure;
+  border-radius: 0.5rem;
 }
 
 .wrapper-list {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   border-radius: 0.9rem;
 }
 
@@ -30,15 +45,13 @@ body {
   flex-direction: column;
   align-items: center;
   padding: 2rem;
-  font-family: 'Press Start 2P', cursive;
 }
 
 .title h1 {
   color: #ca98fda8;
   font-weight: 800;
   font-size: 1.9rem;
-  margin: 0 0 0 35%;
-  text-align: left;
+  text-align: center;
   white-space: nowrap;
   overflow: hidden;
   width: 160px;
@@ -47,11 +60,38 @@ body {
   animation-iteration-count:infinite;
 }
 
+.list-topics {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.add-item {
+  padding: 1rem;
+  color: #68b1b6a1;
+}
+
+.form-control {
+  padding: 0.2rem;
+  margin: 2rem;
+  border-color: rgba(127, 255, 212, 0.211);
+  color: rgb(158, 181, 224);
+}
+
+#addListBtn, #clearListBtn {
+  color: rgba(136, 74, 180, 0.7);
+  background-color: rgba(127, 255, 212, 0.211);
+  border-color: azure;
+  padding: 0.6rem;
+  margin: 2rem;
+}
+
+
 @keyframes type {
   0% {
     width: 0;
   }
   1%, 100%{
-    border-right: 0.2rem solid rgb(255, 255, 255);
+    border-right: solid rgb(255, 255, 255);
   }
 }
