function addToDo done

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,38 +7,35 @@
 }
 
 body {
-  margin-left: 40vh;
-  padding: 0;
-  width: 100vh;
-  height: 100vh;
+  min-height: 100vh;
   background-image: linear-gradient(#a8d5fc9f, #f9c3f395);
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   align-self: center;
 }
 
-.container {
+.input-container {
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
   flex-direction: column;
   align-items: stretch;
-  background-color: rgba(255, 235, 205, 0.242);
-  width: 80vh;
-  height: 50vh;
+  background-color: rgba(255, 235, 205, 0.15);
+  /* width: 50vh;
+  height: 50vh; */
   padding: 1.3rem;
   margin: 0.9rem;
   border: 1px solid azure;
   border-radius: 0.5rem;
 }
 
-.wrapper-list {
+/* .wrapper-list {
   display: flex;
   flex-direction: column;
   align-items: center;
   border-radius: 0.9rem;
-}
+} */
 
 .title {
   display: flex;
@@ -71,11 +68,31 @@ body {
   color: #68b1b6a1;
 }
 
-.form-control {
-  padding: 0.2rem;
+.to-do-input {
+  padding: 0.5rem;
   margin: 2rem;
   border-color: rgba(127, 255, 212, 0.211);
   color: rgb(158, 181, 224);
+}
+
+.to-do-btn {
+  color: rgba(136, 74, 180, 0.7);
+  background-color: rgba(127, 255, 212, 0.211);
+  border-color: azure;
+  padding: 0.2rem;
+}
+
+.to-do-btn:hover {
+  color: azure;
+  background-color: rgba(136, 74, 180, 0.302);
+  border-color: azure;
+  transform: scale(1.5);
+}
+
+
+
+.buttons {
+  display: flex;
 }
 
 #addListBtn, #clearListBtn {
@@ -86,6 +103,28 @@ body {
   margin: 2rem;
 }
 
+#addListBtn:hover, #clearListBtn:hover {
+  transform: scale(1.2);
+}
+
+
+.to-do-container {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  background-color: rgba(255, 235, 205, 0.05);
+  /* width: 80vh;
+  height: 50vh; */
+  padding: 1.3rem;
+  margin: 0.9rem;
+  border: 1px solid azure;
+  border-radius: 0.5rem;
+}
+
+.to-do-list {
+  display: flex;
+  align-items: center;
+}
 
 @keyframes type {
   0% {
@@ -94,4 +133,53 @@ body {
   1%, 100%{
     border-right: solid rgb(255, 255, 255);
   }
+}
+
+/* a parte do HTML criada com JS */
+
+.to-do-list {
+  display: flex;
+  flex-direction: column;
+  align-content: space-between;
+  color: #A482C8;
+  font-size: 0.9rem;
+  list-style: none;
+}
+
+.todo {
+  display: flex;
+  align-items: center;
+}
+
+/* .todo li {
+
+} */
+
+.completed-btn {
+  color: rgba(0, 158, 249, 0.962);
+  background-color: rgba(127, 255, 212, 0.211);
+  border-color: azure;
+  padding: 0.2rem;
+  margin: 0.2rem;
+  margin-left: 2rem;
+}
+
+.completed-btn:hover {
+  color: rgba(255, 255, 255, 0.962);
+  background-color: #91cdd9;
+  transform: scale(1.2);
+}
+
+.delete-btn {
+  color: rgb(203, 71, 71);
+  background-color: rgba(127, 255, 212, 0.211);
+  border-color: azure;
+  padding: 0.2rem;
+  margin: 0.2rem;
+}
+
+.delete-btn:hover {
+  color: rgb(255, 255, 255);
+  background-color: rgb(203, 71, 71);
+  transform: scale(1.2);
 }
